Fixed help color styles and added center alignment

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -34,23 +34,24 @@
 #footer {
 	/* special background for .bg-4 footer*/
 	background-color: #2f2f2f; /*~ black*/
+}
 
+#footer h4 p li {
+	text-align: left;
+}
+
+#footer h4{
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+.text-info {
+	color: #ffffff;
 }
 
 a:link {
 	text-decoration: none;
 }
-p {
-	color: #ffffff;
-}
-#header4{
-	padding-bottom: 10px;
-	padding-top: 10px;
-}
-#header2{
-	margin-bottom: 10px;
-}
-
 
 .animatable {
   /* initially hide animatable objects */
